--- a/app/src/main/res/layout-sw600dp/activity_addfoodpage.xml
+++ b/app/src/main/res/layout-sw600dp/activity_addfoodpage.xml
@@ -9,72 +9,69 @@
 
     <EditText
         android:id="@+id/food_kal_text"
-        android:layout_width="300dp"
-        android:layout_height="48dp"
+        android:layout_width="wrap_content"
+        android:layout_height="70dp"
         android:layout_marginTop="16dp"
         android:ems="10"
         android:hint="Calories"
         android:inputType="number"
         android:textColor="@color/black"
         android:textColorHint="@color/black"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
+        android:textSize="34sp"
+        app:layout_constraintStart_toStartOf="@+id/food_fat_text"
         app:layout_constraintTop_toBottomOf="@+id/food_fat_text" />
 
     <EditText
         android:id="@+id/food_fat_text"
-        android:layout_width="300dp"
-        android:layout_height="48dp"
+        android:layout_width="wrap_content"
+        android:layout_height="70dp"
         android:layout_marginTop="16dp"
         android:ems="10"
         android:hint="Fats"
         android:inputType="number"
         android:textColor="@color/black"
         android:textColorHint="@color/black"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
+        android:textSize="34sp"
+        app:layout_constraintStart_toStartOf="@+id/food_prot_text"
         app:layout_constraintTop_toBottomOf="@+id/food_prot_text" />
 
     <EditText
         android:id="@+id/food_prot_text"
-        android:layout_width="300dp"
-        android:layout_height="48dp"
+        android:layout_width="wrap_content"
+        android:layout_height="70dp"
         android:layout_marginTop="24dp"
         android:ems="10"
         android:hint="Proteins"
         android:inputType="number"
         android:textColor="@color/black"
         android:textColorHint="@color/black"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
+        android:textSize="34sp"
+        app:layout_constraintStart_toStartOf="@+id/food_carb_text"
         app:layout_constraintTop_toBottomOf="@+id/food_carb_text" />
 
     <EditText
         android:id="@+id/food_carb_text"
-        android:layout_width="300dp"
-        android:layout_height="48dp"
+        android:layout_width="wrap_content"
+        android:layout_height="70dp"
         android:layout_marginTop="24dp"
         android:ems="10"
         android:hint="Carbohydrates"
         android:inputType="number"
         android:textColor="@color/black"
         android:textColorHint="@color/black"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
+        android:textSize="34sp"
+        app:layout_constraintStart_toStartOf="@+id/food_category_spinner"
         app:layout_constraintTop_toBottomOf="@+id/food_category_spinner" />
 
     <Button
         android:id="@+id/addFoodbtn"
-        android:layout_width="130dp"
-        android:layout_height="50dp"
+        android:layout_width="266dp"
+        android:layout_height="105dp"
         android:layout_marginTop="8dp"
         android:backgroundTint="@color/green"
         android:text="add"
         android:textColor="@color/grey"
+        android:textSize="34sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -84,14 +81,15 @@
 
     <EditText
         android:id="@+id/food_name_text"
-        android:layout_width="300dp"
-        android:layout_height="48dp"
-        android:layout_marginTop="20dp"
+        android:layout_width="wrap_content"
+        android:layout_height="70dp"
+        android:layout_marginTop="64dp"
         android:ems="10"
         android:hint="Name"
         android:inputType="textPersonName"
         android:textColor="@color/black"
         android:textColorHint="@color/black"
+        android:textSize="34sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
@@ -99,19 +97,18 @@
 
     <Spinner
         android:id="@+id/food_category_spinner"
-        android:layout_width="300dp"
-        android:layout_height="48dp"
+        android:layout_width="450dp"
+        android:layout_height="70dp"
         android:layout_marginTop="24dp"
         android:theme="@style/ThemeOverlay.AppCompat.Light"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/food_name_text"
         app:layout_constraintTop_toBottomOf="@+id/food_name_text" />
 
     <ImageView
         android:id="@+id/foodimageview_add"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:layout_marginTop="16dp"
+        android:layout_width="300dp"
+        android:layout_height="300dp"
+        android:layout_marginTop="24dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
