--- a/app/src/main/res/layout-sw600dp/activity_recoverpassword.xml
+++ b/app/src/main/res/layout-sw600dp/activity_recoverpassword.xml
@@ -30,7 +30,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:maxLength="20"
-            android:textColor="@color/black" />
+            android:textColor="@color/black"
+            android:textSize="34sp" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <TextView
@@ -42,10 +43,12 @@
         android:layout_marginEnd="32dp"
         android:text="In order to recover the password answer to  the following question:"
         android:textColor="@color/black"
+        android:textSize="34sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/username_TextInputLayout_recover" />
+
     <TextView
         android:id="@+id/recovery_password_question_recovery"
         android:layout_width="match_parent"
@@ -54,6 +57,7 @@
         android:layout_marginEnd="32dp"
         android:text="what's the name of your favorite movie?"
         android:textColor="@color/black"
+        android:textSize="34sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/recovery_password_label_recovery" />
@@ -80,15 +84,17 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:maxLength="20"
-            android:textColor="@color/black" />
+            android:textColor="@color/black"
+            android:textSize="34sp" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/recover_btn"
-        android:layout_width="200dp"
-        android:layout_height="60dp"
-        android:background="@color/green"
+        android:layout_width="500dp"
+        android:layout_height="105dp"
+        android:background="@drawable/custom_button_2"
         android:text="recover password"
+        android:textSize="34sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.454"
         app:layout_constraintStart_toStartOf="parent"
