--- a/app/src/main/res/layout-sw600dp/activity_addexercisepage.xml
+++ b/app/src/main/res/layout-sw600dp/activity_addexercisepage.xml
@@ -9,25 +9,24 @@
 
     <EditText
         android:id="@+id/workout_name_text"
-        android:layout_width="300dp"
-        android:layout_height="48dp"
-        android:layout_marginTop="132dp"
+        android:layout_width="wrap_content"
+        android:layout_height="70dp"
+        android:layout_marginTop="316dp"
         android:ems="10"
         android:hint="Name"
         android:inputType="textPersonName"
         android:textColorHint="@color/black"
+        android:textSize="34sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Spinner
         android:id="@+id/workout_category_spinner"
-        android:layout_width="300dp"
-        android:layout_height="48dp"
+        android:layout_width="450dp"
+        android:layout_height="70dp"
         android:layout_marginTop="32dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/workout_name_text"
         app:layout_constraintTop_toBottomOf="@+id/workout_name_text" />
 
     <EditText
@@ -61,11 +60,12 @@
 
     <Button
         android:id="@+id/addWorkoutbtn"
-        android:layout_width="130dp"
-        android:layout_height="50dp"
+        android:layout_width="266dp"
+        android:layout_height="105dp"
         android:backgroundTint="@color/green"
         android:text="add"
         android:textColor="@color/grey"
+        android:textSize="34sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -74,11 +74,10 @@
         app:layout_constraintVertical_bias="0.031" />
 
 
-
     <ImageView
         android:id="@+id/exercisedimageview_add"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
+        android:layout_width="300dp"
+        android:layout_height="300dp"
         android:layout_marginTop="32dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
