--- a/app/src/main/res/layout/activity_updateexercisepage.xml
+++ b/app/src/main/res/layout/activity_updateexercisepage.xml
@@ -5,32 +5,41 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".UpdateExercisePage"
-    android:background="@color/white">
+    android:background="@drawable/background">
 
-    <EditText
+    <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/workout_name_text_update"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
         android:layout_width="wrap_content"
         android:layout_height="48dp"
         android:layout_marginTop="100dp"
-        android:ems="10"
-        android:hint="name"
-        android:inputType="textPersonName"
-        android:textColor="@color/black"
+        android:hint="Name"
         android:textColorHint="@color/black"
-        android:backgroundTint="@color/green"
+        app:boxStrokeColor="@color/green"
+        app:counterEnabled="true"
+        app:counterMaxLength="20"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/txt_workout_name_text_update"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:maxLength="20"
+            android:textColor="@color/black"
+            android:textSize="16sp" />
+    </com.google.android.material.textfield.TextInputLayout>
 
     <Spinner
         android:id="@+id/workout_category_spinner_update"
-        android:layout_width="210dp"
+        android:layout_width="300dp"
         android:layout_height="48dp"
         android:layout_marginTop="32dp"
+        android:theme="@style/ThemeOverlay.AppCompat.Light"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:theme="@style/ThemeOverlay.AppCompat.Light"
         app:layout_constraintTop_toBottomOf="@+id/workout_name_text_update" />
 
     <EditText
